--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Game Hub</title>
+<title>IKOP Math</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
 <style>
 body {
@@ -103,23 +103,23 @@ body.dark a:hover { color: #a450e0; }
 <div id="darkToggle" onclick="toggleDarkMode()">🌙 Dark Mode</div>
 
 <div class="home-page" id="home">
-<h1>Welcome to IKOP Games</h1>
+<h1>Welcome to IKOP Math</h1>
 <p>Discover tons of fun games, tools, and books!</p>
 <button onclick="document.getElementById('main-content').scrollIntoView({ behavior: 'smooth' });">Enter Site</button>
 </div>
 
 <div id="main-content">
 <header>
-<h1>The Game Hub</h1>
+<h1>The Server</h1>
 <h2>"Keep this a secret and have fun..."</h2>
-<h3>Click on a section to view games</h3>
+<h3>Click on a section to view links</h3>
 </header>
 <div class="container">
 <div class="search-box">
 <input type="text" id="search" placeholder="Search for a game..." onkeyup="filterGames()">
 </div>
 
-<h2 class="section-title" onclick="toggleContent('games')">🎮 All Games</h2>
+<h2 class="section-title" onclick="toggleContent('games')">Websites</h2>
 <div id="games" class="content">
 <ul>
 <li><a href="https://1v1lol.org/g/1v1-lol">1v1.lol</a></li>
@@ -171,24 +171,24 @@ body.dark a:hover { color: #a450e0; }
 <li><a href="https://snow-rider3d-cic.pages.dev/">Snowrider 3D #2</a></li>
 <li><a href="https://mathwow.org/play/snowrider/">Snowrider 3D #3</a></li>
 <li><a href="https://snowrider3d.pages.dev/">Snowrider 3D #4</a></li>
-<li><a href="https://github.com/Gams-Offline/Gams">Offline Games Pack</a></li>
 </ul>
 </div>
-<h2 class="section-title" onclick="toggleContent('platforms')">🎮 Game Platforms</h2>
+<h2 class="section-title" onclick="toggleContent('platforms')"> Platforms</h2>
 <div id="platforms" class="content">
 <ul>
-   <li><a href="https://67games.io/">Games.io unblocked </a></li>
-<li><a href="https://azgames.io">AZ Games </a></li>
+   <li><a href="https://67games.io/"> 67 unblocked </a></li>
+<li><a href="https://azgames.io">AZ </a></li>
 <li><a href="https://unblocked-games.s3.amazonaws.com/index.html">FreezeNova </a></li>
 <li><a href="https://royalkingdom.pages.dev/">Royal Kingdom</a></li>
 <li><a href="https://funbyte.pages.dev">Funbyte</a></li>
-<li><a href="https://duckmath.github.io/">VIP Unblocked Games</a/></li>
-<li><a href="https://bestgame.pages.dev/?utm_source=chatgpt.com">BestGame</a></li>
+<li><a href="https://github.com/Gams-Offline/Gams">Offline Pack</a></li>
+<li><a href="https://duckmath.github.io/">Duck Math</a/></li>
+<li><a href="https://bestgame.pages.dev/?utm_source=chatgpt.com">BestOne</a></li>
 <li><a href="https://classroom6.pages.dev">Mountain658</a></li>
 <li><a href="https://s3.amazonaws.com/fernisbest/index.html">Fern</a></li>
 <li><a href="https://student-management-30.pro">Geography-Quiz-6</a></li>
 <li><a href="https://www.vortice.app/play/">Vortice.App</a></li>
-<li><a href="https://www.onlinefreegames.com/">Online Free Games</a></li>
+<li><a href="https://www.onlinefreegames.com/">Online Free Website</a></li>
 <li><a href="https://subjectnotes2.website/">Subject Notes 2 #3</a></li>
 </ul>
 </div>
