--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body.dark a:hover { color: #a450e0; }
 
 <div class="home-page" id="home">
 <h1>Welcome to IKOP Math</h1>
-<p>Discover tons of fun games, tools, and books!</p>
+<p>Discover tons of fun links, tools, and books!</p>
 <button onclick="document.getElementById('main-content').scrollIntoView({ behavior: 'smooth' });">Enter Site</button>
 </div>
 
@@ -116,7 +116,7 @@ body.dark a:hover { color: #a450e0; }
 </header>
 <div class="container">
 <div class="search-box">
-<input type="text" id="search" placeholder="Search for a game..." onkeyup="filterGames()">
+<input type="text" id="search" placeholder="Search for a link..." onkeyup="filterGames()">
 </div>
 
 <h2 class="section-title" onclick="toggleContent('games')">Websites</h2>
@@ -144,12 +144,12 @@ body.dark a:hover { color: #a450e0; }
 <li><a href="https://territorialio.pages.dev">Territorial.io</a></li>
 <li><a href="https://mathwow.org/play/drift-boss/">Drift Boss</a></li>
 <li><a href="https://slowroads.io/">Slow Roads</a></li>
-<li><a href="https://tinyfishing.pages.dev/">More Unblocked Games</a></li>
+<li><a href="https://tinyfishing.pages.dev/">More Unblocked Links</a></li>
 <li><a href="https://xtrenchrun.pages.dev/">X Trench Run and more</a></li>
 <li><a href="https://squidgame.pages.dev/">Red Light, Green Light</a></li>
 <li><a href="https://mathwow.org/play/tomb-of-the-mask/">Tomb of The Mask</a></li>
 <li><a href="https://medv.io/bit-planes/">Bit Planes</a></li>
-<li><a href="https://www.onlinefreegames.com/">Online Free Games</a></li>
+<li><a href="https://www.onlinefreegames.com/">Online Pack 2</a></li>
 <li><a href="https://crossyroad.pages.dev/">Crossy Road</a></li>
 <li><a href="https://onlinetetris.org/tetris-pc">Tetris</a></li>
 <li><a href="https://kour.io">Kour.io</a></li>
